--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ h4 {
   display: grid;
   grid-template-columns: 1fr 7fr 2fr;
   justify-content: space-between;
-  padding: 0.5rem 5rem 0 1rem;
+  padding: 0.5rem 0.1rem 0 1rem;
   background-color: #ffffff;
   position: absolute;
   top: 0;
@@ -99,6 +99,11 @@ svg.header-logo {
 .icons-container svg:hover {
   fill: #c9a16e;
   cursor: pointer;
+}
+
+.row1-header-right {
+  display: flex;
+  justify-content: center;
 }
 
 .scroll-menu {
@@ -476,7 +481,7 @@ li {
     flex-basis: 30rem;
   }
   .share-the-love-right,
-.share-the-love-left {
+  .share-the-love-left {
     display: flex;
   }
   .share-the-love-card .button {
@@ -524,10 +529,6 @@ li {
     display: flex;
     align-items: center;
   }
-  .row1-header-right {
-    display: flex;
-    justify-content: space-evenly;
-  }
   .icon {
     margin: 1.5rem;
   }
@@ -574,7 +575,7 @@ li {
     gap: 2rem;
   }
   .around-the-world-top,
-.around-the-world-bottom {
+  .around-the-world-bottom {
     display: flex;
     gap: 2rem;
   }
@@ -638,7 +639,7 @@ li {
     width: 100%;
   }
   .share-the-love-left,
-.share-the-love-right {
+  .share-the-love-right {
     width: 50%;
   }
 }/*# sourceMappingURL=styles.css.map */
