--- a/css/menu.scss
+++ b/css/menu.scss
@@ -11,16 +11,17 @@ $font-bold: 900;
 // drop-down menu - TO FIX
 .overlay-menu {
   position: absolute;
-  top: 40px;
+  top: 4rem;
   left: -10px;
-  width: 100vw;
+  width: 110vw;
   height: 100vh;
   z-index: -10;
   background-color: $grey;
   overflow: hidden;
   transform: translateY(-120%);
   transition: transform 0.5s ease-in;
-  // overflow: auto;
+  overflow: auto;
+  cursor: pointer;
 
   .icons-container {
     svg {
@@ -35,8 +36,9 @@ $font-bold: 900;
 
 .overlay-menu ul li {
   font-weight: $font-regular;
-  font-size: 1.4rem;
-  padding: 10px 15px;
+  font-size: 1.6rem;
+  padding: 1rem 1rem 1rem 3rem;
+  list-style-type: none;
 }
 // .border {
 //   border-top: 1px solid $mediumgrey;
@@ -45,7 +47,12 @@ $font-bold: 900;
 .overlay-menu ul li:hover {
   background-color: white;
   color: black;
-  border-left: 2px solid $gold;
+  // border-left: 2px solid $gold;
+}
+li .icons-container {
+  padding: 0;
+  grid-template-columns: repeat(4, 25%);
+  justify-content: space-around;
 }
 
 // overlay sites sub-menu
@@ -121,4 +128,24 @@ nav ul ul {
 .time {
   position: absolute;
   margin: 0;
+}
+@media screen and (min-width: 738px) {
+  .overlay-menu {
+    top: 3rem;
+  }
+}
+@media screen and (min-width: 600px) {
+  .overlay-menu {
+    width: 24.5rem;
+  }
+  li .icons-container {
+    padding: 0;
+    grid-template-columns: repeat(4, 4rem);
+    justify-content: space-between;
+  }
+}
+@media screen and (min-width: 800px) {
+  .overlay-menu {
+    top: 7rem;
+  }
 }
