--- a/css/styles.scss
+++ b/css/styles.scss
@@ -127,6 +127,7 @@ svg.header-logo {
   white-space: nowrap;
   background-color: #ffffff;
   margin-top: 4.1rem;
+  margin-bottom: 0.5rem;
 }
 
 .scroll-menu ul {
