fixed newsletter mobile spacing#

--- a/css/menu.scss
+++ b/css/menu.scss
@@ -8,7 +8,7 @@ $font-light: 200;
 $font-regular: 700;
 $font-bold: 900;
 
-// drop-down menu - TO FIX
+// drop-down menu
 .overlay-menu {
   position: absolute;
   top: 4rem;
