img controls overlay added

--- a/css/styles.css
+++ b/css/styles.css
@@ -279,8 +279,7 @@ svg.header-logo {
      object-fit: cover;
   text-align: center;
   align-items: center;
-  margin-top: 2.5rem;
-  margin-bottom: 0;
+  margin: 2.5rem auto;
   max-width: 37rem;
 }
 .most-watched-content-card img {
