--- a/css/styles.scss
+++ b/css/styles.scss
@@ -278,8 +278,9 @@ svg.header-logo {
   @include card-layout;
   text-align: center;
   align-items: center;
-  margin-top: 2.5rem;
-  margin-bottom: 0;
+  // margin-top: 2.5rem;
+  // margin-bottom: 0;
+  margin: 2.5rem auto;
   max-width: 37rem;
   img {
     max-width: 100%;
