--- a/css/styles.scss
+++ b/css/styles.scss
@@ -157,14 +157,23 @@ svg.header-logo {
   padding: 9rem 0 2.5rem 0;
   position: relative;
 }
-.headline-image {
+
+.headline-img-container::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: rgb(0 0 0 / 0.3);
+  height: 22rem;
+}
+.headline-img-container {
   img {
-    position: relative;
+    // position: relative;
     width: 100%;
     height: 22rem;
     object-fit: cover;
   }
 }
+
 .today-text {
   padding-top: 4rem;
   h2 {
@@ -334,6 +343,14 @@ svg.header-logo {
     padding: 0;
   }
 }
+// transition for icons???
+// .connect {
+//   .icons-container {
+//     svg:hover {
+//       transform: translateY(-250%);
+//     }
+//   }
+// }
 // more to love
 .more-to-love-content {
   @include flex-column-center;
@@ -388,10 +405,13 @@ li {
   .container:not(.today) {
     padding: 4.5rem 2.5rem;
   }
-  .headline-image {
+  .headline-img-container {
     img {
       height: 35rem;
     }
+  }
+  .headline-img-container::before {
+    height: 35rem;
   }
 
   .today-text {
@@ -402,7 +422,6 @@ li {
     margin: 0 auto;
     color: #ffffff;
     padding: 4rem 3.8rem 0;
-    text-shadow: 1px 1px 2px #000;
     p {
       color: #ffffff;
     }
@@ -498,10 +517,13 @@ li {
 }
 
 @media screen and (min-width: 800px) {
-  .headline-image {
+  .headline-img-container {
     img {
       height: 55rem;
     }
+  }
+  .headline-img-container::before {
+    height: 55rem;
   }
   .play-circle {
     top: 35rem;
@@ -575,6 +597,7 @@ li {
       margin: 3rem;
     }
   }
+
   // community
   .community {
     margin: 0 15rem;
