--- a/css/styles.scss
+++ b/css/styles.scss
@@ -684,3 +684,12 @@ li {
     width: 50%;
   }
 }
+@media screen and (min-width: 1444px) {
+  .main-content,
+  header,
+  .header-container,
+  footer {
+    max-width: 1444px;
+    margin: 0 auto;
+  }
+}
