--- a/css/styles.css
+++ b/css/styles.css
@@ -49,17 +49,6 @@ h4 {
   border-width: 0.1rem;
 }
 
-.icons-container {
-  margin: 0;
-  padding: 0 3rem;
-  display: grid;
-  grid-template-columns: repeat(4, 6rem);
-  justify-content: space-between;
-}
-.icons-container svg {
-  margin: 2rem;
-}
-
 .header-container {
   position: fixed;
   width: 100%;
@@ -91,10 +80,6 @@ svg.header-logo {
   padding: 0.2rem 6rem 0 1rem;
 }
 
-.icon {
-  padding: 1rem 0.5rem;
-}
-
 .row1-header-right svg:hover,
 .icons-container svg:hover {
   fill: #c9a16e;
@@ -103,7 +88,47 @@ svg.header-logo {
 
 .row1-header-right {
   display: flex;
-  justify-content: center;
+  position: absolute;
+  right: 30px;
+  top: 5px;
+}
+
+.icons-container {
+  margin: 0;
+  padding: 0 3rem;
+  display: grid;
+  grid-template-columns: repeat(4, 6rem);
+  justify-content: space-between;
+}
+.icons-container svg {
+  margin: 2rem;
+}
+
+.icon {
+  padding: 0.8rem 0.5rem;
+  margin: 0 0.5rem;
+  position: relative;
+}
+
+.right-icons {
+  position: relative;
+}
+
+.right-icons::after {
+  content: "";
+  position: absolute;
+  height: 1px;
+  width: 0%;
+  bottom: 5px;
+  right: 0;
+  left: 0;
+  background-color: black;
+  transition: 0.2s;
+  margin: 0 auto;
+}
+
+.right-icons:hover::after {
+  width: 60%;
 }
 
 .scroll-menu {
@@ -540,8 +565,18 @@ li {
     display: flex;
     align-items: center;
   }
+  .row1-header-right {
+    margin-right: 2rem;
+  }
+  .right-icons::after {
+    bottom: -2.8rem;
+    right: -20px;
+  }
   .icon {
-    margin: 1.5rem;
+    margin: 0 1rem;
+    padding: 0.3rem;
+    top: 25px;
+    right: -10px;
   }
   .scroll-menu {
     margin-top: 8.5rem;
