--- a/css/styles.scss
+++ b/css/styles.scss
@@ -241,6 +241,10 @@ svg.header-logo {
   p:nth-child(3) {
     font-size: 1.5rem;
   }
+  img {
+    height: 16rem;
+    width: 25rem;
+  }
 }
 
 .card-container {
@@ -260,8 +264,14 @@ svg.header-logo {
 
 .content-card {
   @include card-layout;
+  .img-container {
+    aspect-ratio: 535 / 340;
+  }
+
   img {
-    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
   }
 }
 
@@ -320,7 +330,8 @@ svg.header-logo {
   margin: 2.5rem auto;
   max-width: 37rem;
   img {
-    max-width: 100%;
+    width: 37rem;
+    height: 23.5rem;
   }
 }
 //share-the-love
@@ -389,11 +400,13 @@ svg.header-logo {
   width: 20rem;
   margin-bottom: 5rem;
   img {
+    object-fit: cover;
     width: 20rem;
+    height: 20rem;
   }
 }
 h4.more {
-  padding-bottom: 0.5rem;
+  padding: 1.2rem 0 0.5rem 0;
   text-align: left;
   font-size: 1.9rem;
   margin: 0;
@@ -492,10 +505,11 @@ li {
     align-items: flex-start;
   }
   .more-to-love-content-card {
-    width: 33.3%;
+    width: 30%;
     img {
       width: auto;
-      max-width: 100%;
+      max-width: 30rem;
+      height: auto;
     }
   }
   // share the love
