--- a/css/menu.scss
+++ b/css/menu.scss
@@ -89,7 +89,6 @@ i {
 
 .menu-container i:last-child {
   top: 18px;
-  background-color: black;
 }
 
 #hamburger-input:checked + label i:nth-child(2) {
@@ -126,5 +125,8 @@ i {
 @media screen and (min-width: 800px) {
   .overlay-menu {
     top: 7rem;
+  }
+  .menu-container:hover i {
+    background-color: $gold;
   }
 }
